// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeprecatedTable Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
  />
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot for cta content alternate settings 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="true"
    data-has-expandable-action="false"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        <span
          class="el-intent-default el-icon"
        >
          <svg
            fill="none"
            height="24"
            role="img"
            title="Icon image with name settings"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.9171 12.8802C18.9971 12.2963 18.9971 11.7041 18.9171 11.1202L20.9771 9.27021C21.3601 8.96517 21.4659 8.42765 21.2271 8.00021L20.0471 6.00021C19.8093 5.58468 19.3103 5.39601 18.8571 5.55021L16.2071 6.45021C15.7387 6.09253 15.2282 5.79364 14.6871 5.56021L14.1371 2.80021C14.0406 2.32708 13.6198 1.99047 13.1371 2.00021H10.7971C10.3143 1.99047 9.89354 2.32708 9.79706 2.80021L9.26706 5.54021C8.72707 5.77589 8.21686 6.07463 7.74706 6.43021L5.09706 5.53021C4.63896 5.37942 4.13849 5.57708 3.90706 6.00021L2.72706 8.00021C2.48823 8.42765 2.59404 8.96517 2.97706 9.27021L5.07706 11.1202C4.99702 11.7041 4.99702 12.2963 5.07706 12.8802L2.97706 14.7302C2.59404 15.0352 2.48823 15.5728 2.72706 16.0002L3.90706 18.0002C4.14487 18.4157 4.64382 18.6044 5.09706 18.4502L7.74706 17.5502C8.21686 17.9058 8.72707 18.2045 9.26706 18.4402L9.81706 21.1802C9.91354 21.6533 10.3343 21.9899 10.8171 21.9802H13.1771C13.6598 21.9899 14.0806 21.6533 14.1771 21.1802L14.7271 18.4402C15.2682 18.2068 15.7787 17.9079 16.2471 17.5502L18.8971 18.4502C19.3383 18.5831 19.8132 18.3973 20.0471 18.0002L21.2271 16.0002C21.4659 15.5728 21.3601 15.0352 20.9771 14.7302L18.9171 12.8802ZM11.9771 15.0002C10.3202 15.0002 8.97706 13.6571 8.97706 12.0002C8.97706 10.3434 10.3202 9.00021 11.9771 9.00021C13.6339 9.00021 14.9771 10.3434 14.9771 12.0002C14.9771 12.7959 14.661 13.5589 14.0984 14.1215C13.5358 14.6841 12.7727 15.0002 11.9771 15.0002Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="mocked-styled-9 el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="foo-bar el-table-cta-cell"
          role="cell"
          tabindex="0"
        >
          <div
            class="mocked-styled-11 el-table-cta-icon-container"
          >
            <span
              class="el-intent-default el-icon"
            >
              <svg
                fill="none"
                height="24"
                role="img"
                title="Icon image with name property"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22.9227 9.16484L12.4227 2.16484C12.089 1.94505 11.6565 1.94505 11.3227 2.16484L0.872748 9.16484C0.470624 9.48875 0.381235 10.0656 0.66646 10.496C0.951685 10.9264 1.51772 11.0689 1.97275 10.8248L2.87275 10.1948V21.4948C2.87275 22.0471 3.32046 22.4948 3.87275 22.4948H19.8727C20.425 22.4948 20.8727 22.0471 20.8727 21.4948V10.1948L21.8227 10.8248C21.9838 10.9376 22.1761 10.9971 22.3727 10.9948C22.8113 10.9914 23.1965 10.7027 23.3227 10.2827C23.4489 9.86268 23.2868 9.40943 22.9227 9.16484ZM18.8727 20.4948H4.87275V8.86484L11.8727 4.19484L18.8727 8.86484V20.4948Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot for expandable content alternate settings 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="false"
    data-has-expandable-action="true"
    data-num-columns-excl-action-col="0"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Some Content
      </div>
    </div>
    <div
      class="mocked-styled-9 el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="foo-bar el-table-expandable-row-trigger-cell"
          role="cell"
          tabindex="0"
        >
          <span
            class="el-intent-default el-icon"
          >
            <svg
              fill="none"
              height="24"
              role="img"
              title="Icon image with name more"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12Z"
                fill="currentColor"
              />
              <path
                d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
                fill="currentColor"
              />
              <path
                d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="mocked-styled-12 el-table-expandable-row"
      >
        <div
          class="mocked-styled-13 el-table-expandable-container"
        >
          <p>
            I am the content that is only visible when expanded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with full props and cta content 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="true"
    data-has-expandable-action="false"
    data-num-columns-excl-action-col="8"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        aria-label="Property"
        class="el-span2 el-deprecated-table-header"
        role="columnheader"
      >
        Property
      </div>
      <div
        aria-label="Customer"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Customer
      </div>
      <div
        aria-label="Client A/C"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Client A/C
      </div>
      <div
        aria-label="Description"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Description
      </div>
      <div
        aria-label="Request Date"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Request Date
      </div>
      <div
        aria-label="Amount"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Amount
      </div>
      <div
        aria-label="Payment Status"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Payment Status
      </div>
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Some Action
      </div>
    </div>
    <div
      class="el-is-active el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="el-span2 el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <span
            class="el-intent-default el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="24"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name property"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.9227 9.16484L12.4227 2.16484C12.089 1.94505 11.6565 1.94505 11.3227 2.16484L0.872748 9.16484C0.470624 9.48875 0.381235 10.0656 0.66646 10.496C0.951685 10.9264 1.51772 11.0689 1.97275 10.8248L2.87275 10.1948V21.4948C2.87275 22.0471 3.32046 22.4948 3.87275 22.4948H19.8727C20.425 22.4948 20.8727 22.0471 20.8727 21.4948V10.1948L21.8227 10.8248C21.9838 10.9376 22.1761 10.9971 22.3727 10.9948C22.8113 10.9914 23.1965 10.7027 23.3227 10.2827C23.4489 9.86268 23.2868 9.40943 22.9227 9.16484ZM18.8727 20.4948H4.87275V8.86484L11.8727 4.19484L18.8727 8.86484V20.4948Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Property"
          >
            Mt Ash Jacket, Brassey Road
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <span
            class="el-intent-default el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="24"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name user"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M8.37998 8.88C8.37998 6.87911 9.99911 5.25551 12 5.25C14.0025 5.25549 15.6245 6.87749 15.63 8.88C15.6272 9.49712 15.5703 10.1128 15.46 10.72C15.3083 12.534 13.8195 13.9453 12 14C10.1805 13.9453 8.69171 12.534 8.54 10.72C8.43267 10.1126 8.37913 9.49685 8.37998 8.88ZM12 12C12.91 12 13.36 11.18 13.49 10.4C13.5796 9.89821 13.6265 9.38972 13.63 8.88C13.678 8.26901 13.3792 7.68276 12.8566 7.36257C12.334 7.04238 11.676 7.04238 11.1534 7.36257C10.6308 7.68276 10.332 8.26901 10.38 8.88C10.3789 9.38949 10.4224 9.8981 10.51 10.4C10.64 11.18 11.09 12 12 12Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M1 12C1 5.92487 5.92487 1 12 1C14.9174 1 17.7153 2.15893 19.7782 4.22183C21.8411 6.28473 23 9.08262 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 17C9.25 17 7.27 18.27 7 19.49H7.06C10.0671 21.5044 13.9929 21.5044 17 19.49C16.73 18.27 14.75 17 12 17ZM12 15C15.07 15 17.62 16.28 18.55 18.12H18.58C21.9161 14.545 21.7874 8.9604 18.2902 5.54284C14.793 2.12528 9.20695 2.12528 5.70975 5.54284C2.21255 8.9604 2.0839 14.545 5.42 18.12C6.38 16.28 8.93 15 12 15Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Customer"
          >
            Mr Johnny Corrigan
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Alternate Lettings Client Acc
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Tenant Payment Request
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Request Date"
          >
            19 Apr 2021
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            £50.00
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Not Requested
          </div>
        </div>
        <div
          class="foo-bar el-table-cta-cell"
          role="cell"
          tabindex="0"
        >
          <div
            class="mocked-styled-11 el-table-cta-icon-container"
          >
            <span
              class="el-intent-default el-icon"
            >
              <svg
                fill="none"
                height="24"
                role="img"
                title="Icon image with name property"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22.9227 9.16484L12.4227 2.16484C12.089 1.94505 11.6565 1.94505 11.3227 2.16484L0.872748 9.16484C0.470624 9.48875 0.381235 10.0656 0.66646 10.496C0.951685 10.9264 1.51772 11.0689 1.97275 10.8248L2.87275 10.1948V21.4948C2.87275 22.0471 3.32046 22.4948 3.87275 22.4948H19.8727C20.425 22.4948 20.8727 22.0471 20.8727 21.4948V10.1948L21.8227 10.8248C21.9838 10.9376 22.1761 10.9971 22.3727 10.9948C22.8113 10.9914 23.1965 10.7027 23.3227 10.2827C23.4489 9.86268 23.2868 9.40943 22.9227 9.16484ZM18.8727 20.4948H4.87275V8.86484L11.8727 4.19484L18.8727 8.86484V20.4948Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with full props and expandable content 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
    data-has-call-to-action="false"
    data-has-expandable-action="true"
    data-num-columns-excl-action-col="8"
    role="table"
  >
    <div
      class="mocked-styled-0 el-deprecated-table-headers-row"
      role="row"
    >
      <div
        aria-label="Property"
        class="el-span2 el-deprecated-table-header"
        role="columnheader"
      >
        Property
      </div>
      <div
        aria-label="Customer"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Customer
      </div>
      <div
        aria-label="Client A/C"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Client A/C
      </div>
      <div
        aria-label="Description"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Description
      </div>
      <div
        aria-label="Request Date"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Request Date
      </div>
      <div
        aria-label="Amount"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Amount
      </div>
      <div
        aria-label="Payment Status"
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        Payment Status
      </div>
      <div
        class="mocked-styled-1 el-deprecated-table-header"
        role="columnheader"
      >
        <span
          class="el-intent-default el-icon"
        >
          <svg
            fill="none"
            height="24"
            role="img"
            title="Icon image with name settings"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.9171 12.8802C18.9971 12.2963 18.9971 11.7041 18.9171 11.1202L20.9771 9.27021C21.3601 8.96517 21.4659 8.42765 21.2271 8.00021L20.0471 6.00021C19.8093 5.58468 19.3103 5.39601 18.8571 5.55021L16.2071 6.45021C15.7387 6.09253 15.2282 5.79364 14.6871 5.56021L14.1371 2.80021C14.0406 2.32708 13.6198 1.99047 13.1371 2.00021H10.7971C10.3143 1.99047 9.89354 2.32708 9.79706 2.80021L9.26706 5.54021C8.72707 5.77589 8.21686 6.07463 7.74706 6.43021L5.09706 5.53021C4.63896 5.37942 4.13849 5.57708 3.90706 6.00021L2.72706 8.00021C2.48823 8.42765 2.59404 8.96517 2.97706 9.27021L5.07706 11.1202C4.99702 11.7041 4.99702 12.2963 5.07706 12.8802L2.97706 14.7302C2.59404 15.0352 2.48823 15.5728 2.72706 16.0002L3.90706 18.0002C4.14487 18.4157 4.64382 18.6044 5.09706 18.4502L7.74706 17.5502C8.21686 17.9058 8.72707 18.2045 9.26706 18.4402L9.81706 21.1802C9.91354 21.6533 10.3343 21.9899 10.8171 21.9802H13.1771C13.6598 21.9899 14.0806 21.6533 14.1771 21.1802L14.7271 18.4402C15.2682 18.2068 15.7787 17.9079 16.2471 17.5502L18.8971 18.4502C19.3383 18.5831 19.8132 18.3973 20.0471 18.0002L21.2271 16.0002C21.4659 15.5728 21.3601 15.0352 20.9771 14.7302L18.9171 12.8802ZM11.9771 15.0002C10.3202 15.0002 8.97706 13.6571 8.97706 12.0002C8.97706 10.3434 10.3202 9.00021 11.9771 9.00021C13.6339 9.00021 14.9771 10.3434 14.9771 12.0002C14.9771 12.7959 14.661 13.5589 14.0984 14.1215C13.5358 14.6841 12.7727 15.0002 11.9771 15.0002Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="el-is-active el-deprecated-table-row-container"
      role="row"
    >
      <div
        class="mocked-styled-2 el-deprecated-table-row"
      >
        <div
          class="el-span2 el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <span
            class="el-intent-default el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="24"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name property"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.9227 9.16484L12.4227 2.16484C12.089 1.94505 11.6565 1.94505 11.3227 2.16484L0.872748 9.16484C0.470624 9.48875 0.381235 10.0656 0.66646 10.496C0.951685 10.9264 1.51772 11.0689 1.97275 10.8248L2.87275 10.1948V21.4948C2.87275 22.0471 3.32046 22.4948 3.87275 22.4948H19.8727C20.425 22.4948 20.8727 22.0471 20.8727 21.4948V10.1948L21.8227 10.8248C21.9838 10.9376 22.1761 10.9971 22.3727 10.9948C22.8113 10.9914 23.1965 10.7027 23.3227 10.2827C23.4489 9.86268 23.2868 9.40943 22.9227 9.16484ZM18.8727 20.4948H4.87275V8.86484L11.8727 4.19484L18.8727 8.86484V20.4948Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Property"
          >
            Mt Ash Jacket, Brassey Road
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <span
            class="el-intent-default el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="24"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name user"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M8.37998 8.88C8.37998 6.87911 9.99911 5.25551 12 5.25C14.0025 5.25549 15.6245 6.87749 15.63 8.88C15.6272 9.49712 15.5703 10.1128 15.46 10.72C15.3083 12.534 13.8195 13.9453 12 14C10.1805 13.9453 8.69171 12.534 8.54 10.72C8.43267 10.1126 8.37913 9.49685 8.37998 8.88ZM12 12C12.91 12 13.36 11.18 13.49 10.4C13.5796 9.89821 13.6265 9.38972 13.63 8.88C13.678 8.26901 13.3792 7.68276 12.8566 7.36257C12.334 7.04238 11.676 7.04238 11.1534 7.36257C10.6308 7.68276 10.332 8.26901 10.38 8.88C10.3789 9.38949 10.4224 9.8981 10.51 10.4C10.64 11.18 11.09 12 12 12Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M1 12C1 5.92487 5.92487 1 12 1C14.9174 1 17.7153 2.15893 19.7782 4.22183C21.8411 6.28473 23 9.08262 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 17C9.25 17 7.27 18.27 7 19.49H7.06C10.0671 21.5044 13.9929 21.5044 17 19.49C16.73 18.27 14.75 17 12 17ZM12 15C15.07 15 17.62 16.28 18.55 18.12H18.58C21.9161 14.545 21.7874 8.9604 18.2902 5.54284C14.793 2.12528 9.20695 2.12528 5.70975 5.54284C2.21255 8.9604 2.0839 14.545 5.42 18.12C6.38 16.28 8.93 15 12 15Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Customer"
          >
            Mr Johnny Corrigan
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Alternate Lettings Client Acc
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Tenant Payment Request
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
            data-narrow-label="Request Date"
          >
            19 Apr 2021
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            £50.00
          </div>
        </div>
        <div
          class="el-table-cell-has-dark-text el-deprecated-table-cell"
          role="cell"
        >
          <div
            class="mocked-styled-10 el-deprecated-table-cell-content"
          >
            Not Requested
          </div>
        </div>
        <div
          class="mocked-styled-8 el-table-expandable-row-trigger-cell"
          role="cell"
          tabindex="0"
        >
          <span
            class="el-intent-primary el-icon"
          >
            <svg
              fill="none"
              height="24"
              role="img"
              title="Icon image with name more"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12Z"
                fill="currentColor"
              />
              <path
                d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
                fill="currentColor"
              />
              <path
                d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="el-is-active el-table-expandable-row"
      >
        <div
          class="mocked-styled-13 el-table-expandable-container"
        >
          <p>
            I am the content that is only visible when expanded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTable Component > should match a snapshot with varied number columns 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-14 el-deprecated-table"
  />
</DocumentFragment>
`;
